[WOR-896] Cleanup various sonar code smells (#187)
Cleanup various sonar code smells