@@ -7,7 +7,6 @@ import bio.terra.stairway.StairwayHook;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import javax.annotation.Nullable;
 import org.slf4j.Logger;
@@ -114,7 +113,7 @@ public class MdcHook implements StairwayHook {
 
   private Map<String, String> deserializeMdc(@Nullable String serializedMdc) {
     if (serializedMdc == null) {
-      return ImmutableMap.of();
+      return Map.of();
     }
     Map<String, String> mdcContext;
     try {
@@ -123,7 +122,7 @@ public class MdcHook implements StairwayHook {
       throw new MDCHandlingException("Error deserializing MDC map from string: " + serializedMdc);
     }
     if (mdcContext == null) {
-      return ImmutableMap.of();
+      return Map.of();
     }
     return mdcContext;
   }
